# Omnicar_Control_Ros2

./: .gitignore
[00] Documentation/Thesis_Alessandro/: biblio.bib  main.tex  preambolo.sty
[01] Cad_files/STL/: Battery_COVER.stl  Cable_lable.stl  Cabletray_W10xH15xL100.stl  Canalina_60mm.stl  Coperchio_Canalina_60mm.stl  JETSON_Support.stl  LIDAR_SUPPORT.stl  LY1_BACK.stl  LY1_FRONT.stl  LY1_FRONT_v2.stl  LY2_B2.stl  LY2_TOP.stl  PILLAR.stl  PI_CAM_short_sup.stl  STAND_OMNICAR.3mf  STAND_OMNICAR.stl  Wago_Case_Back.stl  Wago_Case_Front.stl  all_acc.3mf  cable_lable_S.stl
[02]Code/: 99-omnicar-serial.rules.fixed  AGENTS.md
[02]Code/Omnicar/include/: PID.h  (+8 more)
[02]Code/omnicar_ros_ws/src/5dpo_ratf_ros_driver/: CMakeLists.txt
[02]Code/omnicar_ros_ws/src/5dpo_ratf_ros_driver/config/: sdpo_ratf_ros_driver.yaml
[02]Code/omnicar_ros_ws/src/5dpo_ratf_ros_driver/launch/: omnicar_joy_control.launch  omnicar_lidar_test.launch
[02]Code/omnicar_ros_ws/src/5dpo_ratf_ros_driver/scripts/: timed_test.py
[02]Code/omnicar_ros_ws/src/5dpo_ratf_ros_driver/src/sdpo_ratf_ros_driver/: Robot5dpoRatf.cpp  SdpoRatfROSDriver.cpp
[02]Code/omnicar_ws/src/5dpo_ratf_driver-main/: CMakeLists.txt  README.md  package.xml
[02]Code/omnicar_ws/src/5dpo_ratf_driver-main/doc/: motors-ctrl-calibration.xlsx
[02]Code/omnicar_ws/src/5dpo_ratf_driver-main/include/sdpo_ratf_driver/: Robot5dpoRatf.h  Robot5dpoRatfTune.h  SdpoRatfDriverROS1.h  SdpoRatfDriverROS2.h  SdpoRatfTuneDriverROS1.h  SdpoRatfTuneDriverROS2.h  SerialChannelsConfig.h
[02]Code/omnicar_ws/src/5dpo_ratf_driver-main/launch/: omnicar_bringup.launch.py  omnicar_joy_control.launch.py  sdpo_ratf_driver.launch  sdpo_ratf_driver.launch.py  sdpo_ratf_driver.launch.xml  sdpo_ratf_driver_tune.launch  sdpo_ratf_driver_tune.launch.xml
[02]Code/omnicar_ws/src/5dpo_ratf_driver-main/src/: main_ros1.cpp  main_ros2.cpp  tune_ros1.cpp  tune_ros2.cpp
[02]Code/omnicar_ws/src/5dpo_ratf_driver-main/src/sdpo_ratf_driver/: Robot5dpoRatf.cpp  Robot5dpoRatfTune.cpp  SdpoRatfDriverROS1.cpp  SdpoRatfDriverROS2.cpp  SdpoRatfTuneDriverROS1.cpp  SdpoRatfTuneDriverROS2.cpp  SerialChannelsConfig.cpp
[02]Code/omnicar_ws/src/5dpo_serial_port-main/: CMakeLists.txt  package.xml
[02]Code/omnicar_ws/src/ldlidar_stl_ros/: # Premi invio fino alla fine  # Premi invio fino alla fine.pub  CMakeLists.txt  package.xml
[02]Code/omnicar_ws/src/ldlidar_stl_ros/config/: sdpo_driver_laser_2d_LD19.yaml
[02]Code/omnicar_ws/src/ldlidar_stl_ros/include/: ros_api.h
[02]Code/omnicar_ws/src/ldlidar_stl_ros/launch/: ld06.launch  ld19.launch.py
[02]Code/omnicar_ws/src/ldlidar_stl_ros/src/publish_node/: main.cpp
[02]Code/omnicar_ws/src/omnicar_driver/: CMakeLists.txt  package.xml
[02]Code/omnicar_ws/src/omnicar_driver/src/: omnicar_driver_node.cpp
[02]Code/omnicar_ws/src/sdpo_driver_omnijoy/: CMakeLists.txt  package.xml
[02]Code/omnicar_ws/src/sdpo_driver_omnijoy/launch/: sdpo_driver_omnijoy_logif710.launch.py
[02]Code/omnicar_ws/src/sdpo_driver_omnijoy/src/: main.cpp
[02]Code/omnicar_ws/src/sdpo_drivers_interfaces/: CMakeLists.txt  README.md  package.xml
[02]Code/omnicar_ws/src/sdpo_drivers_interfaces/msg/: MotData.msg  MotDataArray.msg  MotDataArrayROS1.msg  MotEnc.msg  MotEncArray.msg  MotEncArrayROS1.msg  MotRefArray.msg  MotRefArrayROS1.msg
[02]Code/omnicar_ws/src/sdpo_motion_control/: CMakeLists.txt  package.xml
[02]Code/omnicar_ws/src/sdpo_motion_control/config/: go_to_point_controller.yaml  go_to_point_controller_odom_debug.yaml  motion_state_adapter.yaml  nonlinear_mpcc_controller.yaml  path_follower.yaml
[02]Code/omnicar_ws/src/sdpo_motion_control/launch/: go_to_point_controller.launch.py  go_to_point_map.launch.py  go_to_point_odom.launch.py  nonlinear_mpcc_controller.launch.py  nonlinear_mpcc_map.launch.py  path_follower.launch.py  path_follower_map.launch.py
[02]Code/omnicar_ws/src/sdpo_motion_control/msg/: GoToPointDebug.msg  MotionState.msg  PathFollowerDebug.msg
[02]Code/omnicar_ws/src/sdpo_motion_control/src/: go_to_point_controller_node.cpp  motion_state_adapter_node.cpp  nonlinear_mpcc_controller_node.cpp  path_follower_node.cpp
[02]Code/omnicar_ws/src/sdpo_ratf_ros_localization/: CMakeLists.txt  package.xml
[02]Code/omnicar_ws/src/sdpo_ratf_ros_localization/config/: sdpo_ratf_ros_localization.yaml
[02]Code/omnicar_ws/src/sdpo_ratf_ros_localization/include/sdpo_ratf_ros_localization/: SdpoRatfBeacons.h  SdpoRatfEKF.h  SdpoRatfROSLocalizationROS.h  utils.h
[02]Code/omnicar_ws/src/sdpo_ratf_ros_localization/launch/: sdpo_ratf_ros_localization.launch.py
[02]Code/omnicar_ws/src/sdpo_ratf_ros_localization/src/: main.cpp
[02]Code/omnicar_ws/src/sdpo_ratf_ros_localization/src/sdpo_ratf_ros_localization/: SdpoRatfEKF.cpp  SdpoRatfROSLocalizationROS.cpp
[02]Code/omnicar_ws/src/sdpo_ros_odom/: CMakeLists.txt  package.xml
[02]Code/omnicar_ws/src/sdpo_ros_odom/config/: sdpo_ros_odom.yaml  sdpo_ros_odom_cmd_vel.yaml  sdpo_ros_odom_wh.yaml
[02]Code/omnicar_ws/src/sdpo_ros_odom/include/sdpo_ros_odom/: OdomWh.h  OdomWhMotorDrive.h  OdomWhOmni4.h  OdomWhROS2.h  utils.h
[02]Code/omnicar_ws/src/sdpo_ros_odom/launch/: sdpo_ros_odom_cmd_vel.launch.py  sdpo_ros_odom_cmd_vel_bridge.launch.py  sdpo_ros_odom_wh.launch.py
[02]Code/omnicar_ws/src/sdpo_ros_odom/src/: cmd_vel_to_motors_ref_node.cpp  main_wh.cpp
[02]Code/omnicar_ws/src/sdpo_ros_odom/src/sdpo_ros_odom/: OdomWhMotorDrive.cpp  OdomWhOmni4.cpp  OdomWhROS2.cpp  utils.cpp
[02]Code/omnicar_ws/src/serial_communication_channels-main/: CMakeLists.txt  README.md  package.xml  serial_communication_channelsConfig.cmake.in
cad/: Anilha.stp  Anilha_4.stp  Cam+V2.stp  Eletro_Iman_support+v1.stp  Eletro_Iman_support+v2.stp  Estrutura_robo.stp  Estrutura_robo_superior.stp  Fixed.stp  LCD_frame.stp  LY1.f3d  Modular_design.stp  Suporte_postes.stp  Suportes_laser.stp  anilhaimu.stp  chapa_v6.stp  eixo_roda.stp  full+raspberry+pi+4+upgrade+cooling.stp  pillar.stp  placa_sup_rasp.stp  suporte_bateria_FOmni.stp  suporte_camara.stp  suporte_eletroiman.stp  suporte_eletroiman_interno.stp  ydliar_X2.stp
(+444 files in other folders)
