<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sdpo_ros_odom</name>
  <version>0.0.0</version>
  <description>ROS2 partial port of the legacy sdpo_ros_odom package, currently focused on cmd_vel to motors_ref conversion for omni4 drive.</description>

  <maintainer email="alessandro.vigo22@gmail.com">c2sr</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sdpo_drivers_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
